--- a/index.html
+++ b/index.html
@@ -2334,6 +2334,280 @@
 </script>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
+  <!-- WHAT Section -->
+  <div class="project-card">
+    <div class="hud-corner tl"></div>
+    <div class="hud-corner tr"></div>
+    <div class="hud-corner bl"></div>
+    <div class="hud-corner br"></div>
+    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">WHAT: Stabilizing Renewable Hybrid Grids With Grid-Forming Inverters</h3>
+    <p class="text-sm mb-4">This study explores the potential of Grid-Forming (GFM) inverters and Virtual Synchronous Machine (VSM) control to enhance stability within compact renewable hybrid systems, particularly those that integrate photovoltaic (PV) generation with low-inertia hydroelectric units. The objective is to discern how electronically synthesized inertia and autonomous voltage–frequency formation can mitigate the deficiencies of frail or low-mass rotating generators.<br><br>The investigation centers on the manner in which GFM-VSM technology cultivates a stable grid, accommodates rapid fluctuations in PV output, and harmonizes power distribution with the inherently slower mechanical dynamics of hydro generators. By scrutinizing the interplay of virtual inertia, droop characteristics, and voltage regulation under realistic microgrid conditions, the study aspires to elucidate the viability and advantages of supplanting traditional synchronous behavior with sophisticated inverter-based control.</p>
+    <!-- Upper Single Image -->
+    <div class="mb-4 mt-6">
+      <img src="./graphics/vsm1.png" alt="Hybrid Grid Overview" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm1.png', 'Hybrid Grid Overview')">
+      <p class="text-xs text-center mt-2">Hybrid Grid Overview</p>
+    </div>
+    <!-- Lower Sliding Carousel (2 images) -->
+    <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-what-carousel" style="transform: translateX(0%);">
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm2.png" alt="GFM-VSM Control Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm2.png', 'GFM-VSM Control Diagram')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">GFM-VSM Control Diagram</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm3.png" alt="PV-Hydro Integration Model" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm3.png', 'PV-Hydro Integration Model')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">PV-Hydro Integration Model</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('vsm-what-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('vsm-what-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+  </div>
+  <!-- HOW Section -->
+  <div class="project-card hologram">
+    <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">HOW: Control & Integration Workflow</h3>
+    <div class="space-y-3">
+      <div class="flex items-center">
+        <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+        <span class="text-sm">Modeled GFM/VSM voltage–frequency formation and behavior of virtual inertia.</span>
+      </div>
+      <div class="flex items-center">
+        <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+        <span class="text-sm">Configured PV inverters to operate as grid-following while designating grid-forming responsibilities to the BESS inverter.</span>
+      </div>
+      <div class="flex items-center">
+        <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+        <span class="text-sm">Adjusted droop, damping, and virtual inertia parameters to ensure stable interaction between hydro and inverter systems.</span>
+      </div>
+      <div class="flex items-center">
+        <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+        <span class="text-sm">Evaluated stability, transient response, and load-step behavior amidst fluctuating PV conditions and a weak grid.</span>
+      </div>
+      <div class="flex items-center">
+        <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+        <span class="text-sm">Assessed feasibility through a comparative analysis of GFM versus conventional droop control.</span>
+      </div>
+    </div>
+    <!-- Upper Sliding Carousel (2 images) -->
+    <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-how-carousel" style="transform: translateX(0%);">
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm4.png" alt="VSM Control Workflow" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm4.png', 'VSM Control Workflow')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">VSM Control Workflow</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm5.png" alt="Inverter Configuration Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm5.png', 'Inverter Configuration Diagram')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Inverter Configuration Diagram</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('vsm-how-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('vsm-how-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+    <!-- Lower Single Image -->
+    <div class="mb-4 mt-6">
+      <img src="./graphics/vsm6.png" alt="Droop Parameter Tuning" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm6.png', 'Droop Parameter Tuning')">
+      <p class="text-xs text-center mt-2">Droop Parameter Tuning</p>
+    </div>
+  </div>
+  <!-- RESULTS Section -->
+  <div class="project-card">
+    <h3 class="orbitron text-xl font-bold mb-4 text-success-green">RESULTS: Stability Improvements & Operational Benefits</h3>
+    <div class="space-y-4">
+      <div class="bg-green-900 bg-opacity-20 p-3 rounded">
+        <div class="text-sm font-bold">Grid Stability Enhancement</div>
+        <div class="text-xs">GFM-VSM control markedly bolstered frequency and voltage stability, effectively smoothing PV fluctuations prior to the hydro unit's response and upholding stringent operational limits in weak-grid scenarios.</div>
+      </div>
+      <div class="bg-blue-900 bg-opacity-20 p-3 rounded">
+        <div class="text-sm font-bold">Hybrid System Performance</div>
+        <div class="text-xs">The inverter served as the grid reference, facilitating predictable power sharing, diminishing hydro governor oscillations, and averting instability stemming from low inertia.</div>
+      </div>
+      <div class="bg-purple-900 bg-opacity-20 p-3 rounded">
+        <div class="text-sm font-bold">Feasibility & Practical Impact</div>
+        <div class="text-xs">Results suggest robust technical readiness, with GFM-VSM solutions providing substantial practical advantages. This work investigates how Grid-Forming (GFM) inverters and Virtual Synchronous Machine (VSM) control can enhance stability in small renewable hybrid systems, especially those combining PV generation with low-inertia hydro units. The goal is to understand how electronically synthesized inertia and autonomous voltage–frequency formation can offset the limitations of weak or low-mass rotating generators.</div>
+      </div>
+    </div>
+    <!-- Upper Single Image -->
+    <div class="mb-4 mt-6">
+      <img src="./graphics/vsm7.png" alt="Stability Metrics Comparison" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm7.png', 'Stability Metrics Comparison')">
+      <p class="text-xs text-center mt-2">Stability Metrics Comparison</p>
+    </div>
+    <!-- Lower Sliding Carousel (2 images) -->
+    <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-results-carousel" style="transform: translateX(0%);">
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm8.png" alt="Transient Response Plots" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm8.png', 'Transient Response Plots')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Transient Response Plots</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm9.png" alt="Load-Step Behavior Analysis" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm9.png', 'Load-Step Behavior Analysis')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Load-Step Behavior Analysis</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('vsm-results-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('vsm-results-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+  </div>
+</div>
+<style>
+  .carousel-container {
+    display: flex;
+    width: 100%;
+    height: 240px;
+  }
+  .carousel-item {
+    min-width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  .project-image {
+    width: 100%;
+    height: auto;
+    max-height: 200px;
+    object-fit: contain;
+  }
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
+  }
+  .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+  }
+  .modal-caption {
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    margin-top: 10px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.7);
+  }
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+  }
+</style>
+<script>
+  function slideCarousel(id, direction) {
+    const carousel = document.getElementById(id);
+    let currentTransform = parseInt(carousel.style.transform.replace('translateX(', '').replace('%)', '') || 0);
+    const numItems = carousel.children.length;
+    currentTransform += direction * 100;
+    if (currentTransform < -100 * (numItems - 1)) currentTransform = 0;
+    if (currentTransform > 0) currentTransform = -100 * (numItems - 1);
+    carousel.style.transition = 'transform 0.5s ease-in-out';
+    carousel.style.transform = `translateX(${currentTransform}%)`;
+  }
+  function autoSlide(id) {
+    let index = 0;
+    const carousel = document.getElementById(id);
+    const numItems = carousel.children.length;
+    if (numItems <= 1) return;
+    setInterval(() => {
+      index = (index + 1) % numItems;
+      carousel.style.transition = 'transform 0.5s ease-in-out';
+      carousel.style.transform = `translateX(-${index * 100}%)`;
+    }, 5000);
+  }
+  function openModal(src, caption) {
+    const modal = document.createElement('div');
+    modal.className = 'modal';
+    let description = '';
+    switch (caption) {
+      case 'Hybrid Grid Overview':
+        description = 'Overview of the hybrid renewable grid system with PV and hydro integration.';
+        break;
+      case 'GFM-VSM Control Diagram':
+        description = 'Diagram illustrating Grid-Forming and Virtual Synchronous Machine control.';
+        break;
+      case 'PV-Hydro Integration Model':
+        description = 'Model showing integration of PV and hydro units in the hybrid system.';
+        break;
+      case 'VSM Control Workflow':
+        description = 'Workflow for modeling VSM voltage-frequency formation.';
+        break;
+      case 'Inverter Configuration Diagram':
+        description = 'Configuration of inverters in grid-forming and grid-following modes.';
+        break;
+      case 'Droop Parameter Tuning':
+        description = 'Tuning of droop, damping, and virtual inertia parameters.';
+        break;
+      case 'Stability Metrics Comparison':
+        description = 'Comparison of stability metrics under GFM vs conventional control.';
+        break;
+      case 'Transient Response Plots':
+        description = 'Plots showing transient response and load-step behavior.';
+        break;
+      case 'Load-Step Behavior Analysis':
+        description = 'Analysis of system behavior under load steps and PV fluctuations.';
+        break;
+      default:
+        description = caption;
+    }
+    modal.innerHTML = `
+      <span class="close" onclick="this.parentElement.style.display='none'">&times;</span>
+      <img src="${src}" alt="${caption}" class="modal-content">
+      <div class="modal-caption">${caption}<br>${description}</div>
+    `;
+    document.body.appendChild(modal);
+    modal.style.display = 'block';
+  }
+  document.addEventListener('DOMContentLoaded', () => {
+    autoSlide('vsm-what-carousel');
+    autoSlide('vsm-how-carousel');
+    autoSlide('vsm-results-carousel');
+  });
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 
 
@@ -4369,6 +4643,7 @@
 </body>
 </html>
 ```
+
 
 
 
