--- a/index.html
+++ b/index.html
@@ -2604,6 +2604,202 @@
 
 
 
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
+  <!-- WHAT Section -->
+  <div class="project-card">
+    <div class="hud-corner tl"></div>
+    <div class="hud-corner tr"></div>
+    <div class="hud-corner bl"></div>
+    <div class="hud-corner br"></div>
+    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">WHAT: Understanding Grid-Forming Inverters in PV–Hydro Microgrids</h3>
+    <p class="text-sm mb-4">
+      This thesis explores how Grid-Forming (GFM) inverters and Virtual Synchronous Machine (VSM) control can support low inertia systems. For study purpose a solar PV and low-inertia hydro generator has been considered. Many remote microgrids struggle with fast frequency changes and unstable voltage because the hydro unit does not have enough rotating mass to absorb disturbances. This work focuses on how a GFM inverter can act as the main voltage and frequency source, and how virtual inertia can make the system behave more like a traditional generator-based grid.<br><br>
+      The study looks at the behavior of the combined PV–Hydro–GFM system under realistic situations such as sudden load steps, cloud-driven PV changes, and weak-grid conditions. By studying these interactions, the thesis aims to give a clearer picture of how GFM–VSM technology can make renewable-heavy microgrids more stable, more predictable, and more suitable for continuous operation in areas with limited electrical infrastructure.
+    </p>
+
+    <!-- Upper Single Image -->
+    <div class="mb-4 mt-6">
+      <img src="./graphics/vsm1.png" alt="Hybrid Grid Overview" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm1.png', 'Hybrid Grid Overview')">
+      <p class="text-xs text-center mt-2">Hybrid Grid Overview</p>
+    </div>
+
+    <!-- Lower Sliding Carousel (2 images) -->
+    <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-what-carousel" style="transform: translateX(0%);">
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm2.png" alt="GFM-VSM Control Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm2.png', 'GFM-VSM Control Diagram')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">GFM-VSM Control Diagram</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm3.png" alt="PV-Hydro Integration Model" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm3.png', 'PV-Hydro Integration Model')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">PV-Hydro Integration Model</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('vsm-what-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('vsm-what-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+  </div>
+
+  <!-- HOW Section -->
+  <div class="project-card hologram">
+    <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">HOW: Simulation & Modeling Approach (Ongoing Thesis Work)</h3>
+    <div class="space-y-3">
+      <div class="flex items-start">
+        <div class="w-4 h-4 border border-accent-cyan mr-3 mt-1 flex-shrink-0"></div>
+        <span class="text-sm">Developing a dynamic model of the PV–Hydro microgrid, including a simplified swing equation to capture how virtual inertia interacts with the hydro generator’s real inertia.</span>
+      </div>
+      <div class="flex items-start">
+        <div class="w-4 h-4 border border-accent-cyan mr-3 mt-1 flex-shrink-0"></div>
+        <span class="text-sm">Building a simulation environment where the GFM inverter forms voltage and frequency, while the hydro generator synchronizes to it and the PV inverter acts as a grid-following source.</span>
+      </div>
+      <div class="flex items-start">
+        <div class="w-4 h-4 border border-accent-cyan mr-3 mt-1 flex-shrink-0"></div>
+        <span class="text-sm">Studying how the system reacts to disturbances such as PV fluctuations, load changes, and variations in hydro output, comparing GFM operation against traditional grid-following control.</span>
+      </div>
+      <div class="flex items-start">
+        <div class="w-4 h-4 border border-accent-cyan mr-3 mt-1 flex-shrink-0"></div>
+        <span class="text-sm">Since this work is part of an ongoing thesis, the models, tuning methods, and simulation cases are being expanded and refined step-by-step to reach more realistic conclusions and system understanding.</span>
+      </div>
+    </div>
+
+    <!-- Upper Sliding Carousel (2 images) -->
+    <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-how-carousel" style="transform: translateX(0%);">
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm4.png" alt="VSM Control Workflow" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm4.png', 'VSM Control Workflow')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">VSM Control Workflow</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm5.png" alt="Inverter Configuration Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm5.png', 'Inverter Configuration Diagram')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Inverter Configuration Diagram</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('vsm-how-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('vsm-how-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+
+    <!-- Lower Single Image -->
+    <div class="mb-4 mt-6">
+      <img src="./graphics/vsm6.png" alt="Droop Parameter Tuning" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm6.png', 'Droop Parameter Tuning')">
+      <p class="text-xs text-center mt-2">Droop Parameter Tuning</p>
+    </div>
+  </div>
+
+  <!-- RESULTS Section -->
+  <div class="project-card">
+    <h3 class="orbitron text-xl font-bold mb-4 text-success-green">RESULTS: Key Findings & Early Technical Insights</h3>
+    <div class="space-y-4">
+      <div class="bg-green-900 bg-opacity-20 p-3 rounded">
+        <div class="text-sm font-bold">Improved Frequency Behavior</div>
+        <div class="text-xs">Early simulations show that the GFM–VSM inverter provides fast support during sudden load or PV changes, reducing frequency dips and keeping the microgrid more stable than the hydro unit alone.</div>
+      </div>
+      <div class="bg-blue-900 bg-opacity-20 p-3 rounded">
+        <div class="text-sm font-bold">Better Coordination With the Hydro Generator</div>
+        <div class="text-xs">When the inverter forms the grid, the hydro generator synchronizes more smoothly, experiences fewer oscillations, and avoids the “hunting” behavior seen in low-inertia setups.</div>
+      </div>
+      <div class="bg-purple-900 bg-opacity-20 p-3 rounded">
+        <div class="text-sm font-bold">Positive Feasibility Outlook</div>
+        <div class="text-xs">Initial results indicate that GFM–VSM control can make PV–Hydro hybrid systems more reliable, with clearer voltage profiles and less risk of instability. While the full validation is still in progress, the thesis findings so far support the idea that grid-forming control is a practical and promising solution for small renewable microgrids.</div>
+      </div>
+    </div>
+
+    <!-- Upper Single Image -->
+    <div class="mb-4 mt-6">
+      <img src="./graphics/vsm7.png" alt="Stability Metrics Comparison" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm7.png', 'Stability Metrics Comparison')">
+      <p class="text-xs text-center mt-2">Stability Metrics Comparison</p>
+    </div>
+
+    <!-- Lower Sliding Carousel (2 images) -->
+    <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-results-carousel" style="transform: translateX(0%);">
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm8.png" alt="Transient Response Plots" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm8.png', 'Transient Response Plots')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Transient Response Plots</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full relative">
+          <img src="./graphics/vsm9.png" alt="Load-Step Behavior Analysis" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm9.png', 'Load-Step Behavior Analysis')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Load-Step Behavior Analysis</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('vsm-results-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('vsm-results-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+
+    <!-- REQUEST THESIS BUTTON -->
+    <div class="mt-8">
+      <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Request%20GFM-VSM%20PV-Hydro%20Thesis%20Report&body=Hi%20Deepak%2C%0A%0AI%20would%20like%20to%20request%20the%20full%20thesis%20report%20on%20Grid-Forming%20Inverters%20in%20PV-Hydro%20Microgrids.%0A%0AThank%20you!"
+         class="block bg-[var(--primary-blue)] text-black px-6 py-3 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron text-lg">
+        Request Full Thesis Report
+      </a>
+    </div>
+  </div>
+</div>
+
+<style>
+  .carousel-container { display: flex; width: 100%; height: 240px; }
+  .carousel-item { min-width: 100%; height: 100%; position: relative; }
+  .project-image { width: 100%; height: auto; max-height: 200px; object-fit: contain; }
+  .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index: 1000; }
+  .modal-content { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); max-width: 90%; max-height: 90%; }
+  .modal-caption { text-align: center; color: white; font-size: 16px; margin-top: 10px; padding: 10px; background: rgba(0,0,0,0.7); }
+  .close { position: absolute; top: 10px; right: 20px; color: white; font-size: 30px; cursor: pointer; }
+</style>
+
+<script>
+  function slideCarousel(id, direction) {
+    const carousel = document.getElementById(id);
+    let current = parseInt(carousel.style.transform.replace('translateX(', '').replace('%)', '') || 0);
+    const items = carousel.children.length;
+    current += direction * 100;
+    if (current < -100 * (items - 1)) current = 0;
+    if (current > 0) current = -100 * (items - 1);
+    carousel.style.transition = 'transform 0.5s ease-in-out';
+    carousel.style.transform = `translateX(${current}%)`;
+  }
+  function autoSlide(id) {
+    let idx = 0;
+    const carousel = document.getElementById(id);
+    const total = carousel.children.length;
+    if (total <= 1) return;
+    setInterval(() => {
+      idx = (idx + 1) % total;
+      carousel.style.transition = 'transform 0.5s ease-in-out';
+      carousel.style.transform = `translateX(-${idx * 100}%)`;
+    }, 5000);
+  }
+  function openModal(src, caption) {
+    const modal = document.createElement('div');
+    modal.className = 'modal';
+    modal.innerHTML = `
+      <span class="close" onclick="this.parentElement.style.display='none'">×</span>
+      <img src="${src}" class="modal-content">
+      <div class="modal-caption">${caption}</div>
+    `;
+    document.body.appendChild(modal);
+    modal.style.display = 'block';
+  }
+  document.addEventListener('DOMContentLoaded', () => {
+    autoSlide('vsm-what-carousel');
+    autoSlide('vsm-how-carousel');
+    autoSlide('vsm-results-carousel');
+  });
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
 
 
 
@@ -4643,6 +4839,7 @@
 </body>
 </html>
 ```
+
 
 
 
