request button uploaded

--- a/index.html
+++ b/index.html
@@ -2472,6 +2472,15 @@
       <button onclick="slideCarousel('vsm-results-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
       <button onclick="slideCarousel('vsm-results-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
     </div>
+
+
+    <!-- REQUEST THESIS BUTTON -->
+    <div class="mt-8">
+      <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Request%20GFM-VSM%20PV-Hydro%20Thesis%20Report&body=Hi%20Deepak%2C%0A%0AI%20would%20like%20to%20request%20the%20full%20thesis%20report%20on%20Grid-Forming%20Inverters%20in%20PV-Hydro%20Microgrids.%0A%0AThank%20you!"
+         class="block bg-[var(--primary-blue)] text-black px-6 py-3 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron text-lg">
+        Request Full Thesis Report
+      </a>
+    </div>
   </div>
 </div>
 <style>
@@ -4647,6 +4656,7 @@
 </body>
 </html>
 ```
+
 
 
 
