--- a/index.html
+++ b/index.html
@@ -2445,8 +2445,8 @@
         <div class="text-xs">When the inverter forms the grid, the hydro generator synchronizes more smoothly, experiences fewer oscillations, and avoids the “hunting” behavior seen in low-inertia setups.</div>
       </div>
       <div class="bg-purple-900 bg-opacity-20 p-3 rounded">
-        <div class="text-sm font-bold">Positive Feasibility Outlook</div>
-        <div class="text-xs">Initial results indicate that GFM–VSM control can make PV–Hydro hybrid systems more reliable, with clearer voltage profiles and less risk of instability. While the full validation is still in progress, the thesis findings so far support the idea that grid-forming control is a practical and promising solution for small renewable microgrids.</div>
+        <div class="text-sm font-bold">Ride-Through Performance</div>
+        <div class="text-xs">The PV inverter follows IEEE 2800 ride-through standards, remaining connected during voltage and frequency disturbances within limits.Initial simulations show that the controller continuously supplies the reference current. While the full validation is still in progress, the thesis findings so far support the idea that grid-forming control is a practical and promising solution for small renewable microgrids.</div>
       </div>
     </div>
 
@@ -2478,7 +2478,7 @@
     <div class="mt-8">
       <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Request%20GFM-VSM%20PV-Hydro%20Thesis%20Report&body=Hi%20Deepak%2C%0A%0AI%20would%20like%20to%20request%20the%20full%20thesis%20report%20on%20Grid-Forming%20Inverters%20in%20PV-Hydro%20Microgrids.%0A%0AThank%20you!"
          class="block bg-[var(--primary-blue)] text-black px-6 py-3 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron text-lg">
-        Request Full Thesis Report
+        Request Thesis Progress
       </a>
     </div>
   </div>
@@ -4656,6 +4656,7 @@
 </body>
 </html>
 ```
+
 
 
 
