--- a/index.html
+++ b/index.html
@@ -2129,11 +2129,11 @@
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="anfis-what-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis2.png" alt="Cross-Coupled AVR-LFC System Model(PID)" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis2.png', 'Cross-Coupled AVR-LFC System Model(PID)')">
+          <img src="./graphics/avr2.png" alt="Cross-Coupled AVR-LFC System Model(PID)" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/avr2.png', 'Cross-Coupled AVR-LFC System Model(PID)')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Matlab PID based control architecture design </p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis3.png" alt="Cross-Coupled AVR-LFC system Model(ANFIS)" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis3.png', 'Cross-Coupled AVR-LFC System Model(ANFIS)')">
+          <img src="./graphics/avr3.png" alt="Cross-Coupled AVR-LFC system Model(ANFIS)" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/avr3.png', 'Cross-Coupled AVR-LFC System Model(ANFIS)')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Matlab ANFIS based control architecture design</p>
         </div>
       </div>
@@ -2165,7 +2165,7 @@
     </div>
     <!-- Upper Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/anfis1.png" alt="ANFIS Architecture" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis1.png', 'ANFIS Architecture')">
+      <img src="./graphics/avr1.png" alt="ANFIS Architecture" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/avr1.png', 'ANFIS Architecture')">
       <p class="text-xs text-center mt-2">ANFIS Controller Neural Network Layering</p>
     </div>
     <!-- Lower Single Image -->
@@ -2193,14 +2193,14 @@
     </div>
     <!-- Upper Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/anfis5.png" alt="Graphical Output" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis5.png', 'Graphical Output')">
+      <img src="./graphics/avr5.png" alt="Graphical Output" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/avr5.png', 'Graphical Output')">
       <p class="text-xs text-center mt-2">(Voltage/Frequency) vs Time Responses of Different Controllers.</p>
     </div>
     <!-- Lower Sliding Carousel (2 images) -->
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="anfis-results-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis4.png" alt="Voltage Response" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis4.png', 'Voltage Response')">
+          <img src="./graphics/avr4.png" alt="Voltage Response" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/avr4.png', 'Voltage Response')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">System Voltage.</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
@@ -2365,18 +2365,18 @@
     <p class="text-sm mb-4">This thesis explores how Grid-Forming (GFM) inverters and Virtual Synchronous Machine (VSM) control can support low inertia systems. For study Purpose a solar PV and low-inertia hydro generator has been considered. Many remote microgrids struggle with fast frequency changes and unstable voltage because the hydro unit does not have enough rotating mass to absorb disturbances. This work focuses on how a GFM inverter can act as the main voltage and frequency source, and how virtual inertia can make the system behave more like a traditional generator-based grid.<br><br>The study looks at the behavior of the combined PV–Hydro–GFM system under realistic situations such as sudden load steps, cloud-driven PV changes, and weak-grid conditions. By studying these interactions, the thesis aims to give a clearer picture of how GFM–VSM technology can make renewable-heavy microgrids more stable, more predictable, and more suitable for continuous operation in areas with limited electrical infrastructure.</p>
     <!-- Upper Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/vsm1.png" alt="Hybrid Grid Overview" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm1.png', 'Hybrid Grid Overview')">
+      <img src="./graphics/anfis1.png" alt="Hybrid Grid Overview" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis1.png', 'Hybrid Grid Overview')">
       <p class="text-xs text-center mt-2">Hybrid Grid Overview</p>
     </div>
     <!-- Lower Sliding Carousel (2 images) -->
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-what-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/vsm2.png" alt="GFM-VSM Control Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm2.png', 'GFM-VSM Control Diagram')">
+          <img src="./graphics/anfis2.png" alt="GFM-VSM Control Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis2.png', 'GFM-VSM Control Diagram')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">GFM-VSM Control Diagram</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/vsm3.png" alt="PV-Hydro Integration Model" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm3.png', 'PV-Hydro Integration Model')">
+          <img src="./graphics/anfis3.png" alt="PV-Hydro Integration Model" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis3.png', 'PV-Hydro Integration Model')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">PV-Hydro Integration Model</p>
         </div>
       </div>
@@ -2413,11 +2413,11 @@
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-how-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/vsm4.png" alt="VSM Control Workflow" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm4.png', 'VSM Control Workflow')">
+          <img src="./graphics/anfis4.png" alt="VSM Control Workflow" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis4.png', 'VSM Control Workflow')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">VSM Control Workflow</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/vsm5.png" alt="Inverter Configuration Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm5.png', 'Inverter Configuration Diagram')">
+          <img src="./graphics/anfis5.png" alt="Inverter Configuration Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis5.png', 'Inverter Configuration Diagram')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Inverter Configuration Diagram</p>
         </div>
       </div>
@@ -2426,7 +2426,7 @@
     </div>
     <!-- Lower Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/vsm6.png" alt="Droop Parameter Tuning" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm6.png', 'Droop Parameter Tuning')">
+      <img src="./graphics/anfis6.png" alt="Droop Parameter Tuning" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis6.png', 'Droop Parameter Tuning')">
       <p class="text-xs text-center mt-2">Droop Parameter Tuning</p>
     </div>
   </div>
@@ -2454,18 +2454,18 @@
     
     <!-- Upper Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/vsm7.png" alt="Stability Metrics Comparison" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/vsm7.png', 'Stability Metrics Comparison')">
+      <img src="./graphics/anfis7.png" alt="Stability Metrics Comparison" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis7.png', 'Stability Metrics Comparison')">
       <p class="text-xs text-center mt-2">Stability Metrics Comparison</p>
     </div>
     <!-- Lower Sliding Carousel (2 images) -->
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-results-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/vsm8.png" alt="Transient Response Plots" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm8.png', 'Transient Response Plots')">
+          <img src="./graphics/anfis8.png" alt="Transient Response Plots" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis8.png', 'Transient Response Plots')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Transient Response Plots</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/vsm9.png" alt="Load-Step Behavior Analysis" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/vsm9.png', 'Load-Step Behavior Analysis')">
+          <img src="./graphics/anfis9.png" alt="Load-Step Behavior Analysis" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis9.png', 'Load-Step Behavior Analysis')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Load-Step Behavior Analysis</p>
         </div>
       </div>
@@ -4656,6 +4656,7 @@
 </body>
 </html>
 ```
+
 
 
 
