--- a/index.html
+++ b/index.html
@@ -2366,17 +2366,17 @@
     <!-- Upper Single Image -->
     <div class="mb-4 mt-6">
       <img src="./graphics/anfis1.png" alt="Hybrid Grid Overview" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis1.png', 'Hybrid Grid Overview')">
-      <p class="text-xs text-center mt-2">Hybrid Grid Overview</p>
+      <p class="text-xs text-center mt-2"> Microgrid Overview</p>
     </div>
     <!-- Lower Sliding Carousel (2 images) -->
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-what-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis2.png" alt="GFM-VSM Control Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis2.png', 'GFM-VSM Control Diagram')">
-          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">GFM-VSM Control Diagram</p>
+          <img src="./graphics/anfis3.png" alt="Ride Through curve" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis3.png', 'Rie through Curve')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white"></p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis3.png" alt="PV-Hydro Integration Model" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis3.png', 'PV-Hydro Integration Model')">
+          <img src="./graphics/anfis2.png" alt="PV-Hydro Integration Model" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis2.png', 'PV-Hydro  Model')">
           <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">PV-Hydro Integration Model</p>
         </div>
       </div>
@@ -2413,12 +2413,12 @@
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-how-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis4.png" alt="VSM Control Workflow" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis4.png', 'VSM Control Workflow')">
-          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">VSM Control Workflow</p>
+          <img src="./graphics/anfis4.png" alt="VSM Control " class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis4.png', 'GFM controller')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">GMF-VSM Controller Designw</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
-          <img src="./graphics/anfis5.png" alt="Inverter Configuration Diagram" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis5.png', 'Inverter Configuration Diagram')">
-          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Inverter Configuration Diagram</p>
+          <img src="./graphics/anfis5.png" alt="layer Structure " class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis5.png', 'Layer Structure ')">
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white"> Components Layer Structure </p>
         </div>
       </div>
       <button onclick="slideCarousel('vsm-how-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
@@ -2426,8 +2426,8 @@
     </div>
     <!-- Lower Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/anfis6.png" alt="Droop Parameter Tuning" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis6.png', 'Droop Parameter Tuning')">
-      <p class="text-xs text-center mt-2">Droop Parameter Tuning</p>
+      <img src="./graphics/anfis6.png" alt="VSM layout" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis6.png', 'VSM layout')">
+      <p class="text-xs text-center mt-2">Proposed VSM Layout</p>
     </div>
   </div>
 
@@ -2454,19 +2454,19 @@
     
     <!-- Upper Single Image -->
     <div class="mb-4 mt-6">
-      <img src="./graphics/anfis7.png" alt="Stability Metrics Comparison" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis7.png', 'Stability Metrics Comparison')">
-      <p class="text-xs text-center mt-2">Stability Metrics Comparison</p>
+      <img src="./graphics/anfis7.png" alt="Active Power Graph" class="project-image w-full object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/anfis7.png', 'Active Power Graph')">
+      <p class="text-xs text-center mt-2">GFM control delivered real and reactive power during a sudden load increase</p>
     </div>
     <!-- Lower Sliding Carousel (2 images) -->
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="vsm-results-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
           <img src="./graphics/anfis8.png" alt="Transient Response Plots" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis8.png', 'Transient Response Plots')">
-          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Transient Response Plots</p>
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white"></p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full h-full relative">
           <img src="./graphics/anfis9.png" alt="Load-Step Behavior Analysis" class="w-full h-full object-contain rounded cursor-pointer" onclick="openModal('./graphics/anfis9.png', 'Load-Step Behavior Analysis')">
-          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white">Load-Step Behavior Analysis</p>
+          <p class="text-xs text-center mt-2 absolute bottom-0 w-full text-white"></p>
         </div>
       </div>
       <button onclick="slideCarousel('vsm-results-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
@@ -4656,6 +4656,7 @@
 </body>
 </html>
 ```
+
 
 
 
