--- a/index.html
+++ b/index.html
@@ -2635,12 +2635,12 @@
     <!-- Large Flowchart SVG with Drive Button -->
     <div class="mb-4 px-4 relative group">
       <img
-        src="./graphics/project_ai_automation.svg"
+        src="./graphics/project_ai_automation.png"
         alt="Proposed Research Overview"
         class="w-full h-96 object-contain rounded-lg border-2 border-[var(--accent-cyan)] cursor-pointer shadow-xl transition-transform hover:scale-[1.01]"
-        onclick="openModal('./graphics/project_ai_automation.svg', 'Proposed Research Overview')">
+        onclick="openModal('./graphics/project_ai_automation.png', 'Proposed Research Overview')">
       
-      <a href="https://github.com/elexwizz447/dipesh_officialwebsite/blob/main/graphics/project_ai_automation.svg" target="_blank"
+      <a href="https://github.com/elexwizz447/dipesh_officialwebsite/blob/main/graphics/project_ai_automation.png  " target="_blank"
          class="absolute top-6 right-6 bg-white/20 backdrop-blur-md hover:bg-white/40 text-white px-5 py-3 rounded-xl text-sm font-bold opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-center gap-2 shadow-xl">
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M8.67 3.64L12 8.55l3.33-4.91L22 13.64l-9.67 6.45L2.67 13.64 8.67 3.64z"/></svg>
         View Image on Google Drive
@@ -2688,7 +2688,7 @@
         <div class="relative overflow-hidden mb-3 rounded border border-[var(--accent-cyan)]" style="height: 160px;">
           <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="explanation-carousel" style="transform: translateX(0%);">
             <div class="carousel-item flex-shrink-0 w-full h-full">
-              <img src="./graphics/picture3.png" alt="Developed Global aggregate curve" class="w-full h-full object-contain cursor-pointer" onclick="openModal('./graphics/picture3.png', 'Global aggegate curve')">
+              <img src="./graphics/Picture3.png" alt="Developed Global aggregate curve" class="w-full h-full object-contain cursor-pointer" onclick="openModal('./graphics/Picture3.png', 'Global aggegate curve')">
             </div>
             <div class="carousel-item flex-shrink-0 w-full h-full">
               <img src="./graphics/fig4.png" alt="Regional (Magnitude +Timeshift)" class="w-full h-full object-contain cursor-pointer" onclick="openModal('./graphics/fig4.png', 'Regional Contribution(magnitude + time shift)')">
@@ -2738,7 +2738,7 @@
         <div class="relative overflow-hidden w-full h-full rounded">
           <div class="carousel-container" id="table-carousel">
             <div class="carousel-item">
-              <img src="./graphics/picture4.png" alt="Research Paper(Not Published)" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/picture4.png', 'Research Paper(Not Published)')">
+              <img src="./graphics/Picture4.png" alt="Research Paper(Not Published)" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/Picture4.png', 'Research Paper(Not Published)')">
             </div>
             <div class="carousel-item">
               <img src="./graphics/tablefinal.svg" alt="Design Explanation" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/tablefinal.svg', 'Detailed Explanation')">
@@ -4927,6 +4927,7 @@
 </body>
 </html>
 ```
+
 
 
 
