--- a/index.html
+++ b/index.html
@@ -479,7 +479,9 @@
   <section id="hero" class="section">
     <div class="hero-content">
       <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
-      <h2 class="hero-subtitle">ELECTRICAL ENGINEER </h2>
+      <h2 class="hero-subtitle">
+As an enthusiastic Electrical Engineering researcher with a strong academic foundation, I am parallelly pursuing industry level work while advancing innovative research initiatives.
+ </h2>
       <p class="text-xl italic mt-4">"I like engineering because I love imagining."</p>
       <div class="flex justify-center space-x-8 mt-8">
         <div class="hud-element p-6 text-center">
@@ -487,8 +489,11 @@
           <div class="hud-corner tr"></div>
           <div class="hud-corner bl"></div>
           <div class="hud-corner br"></div>
-          <div class="orbitron text-2xl font-bold text-accent-cyan">TECHNOLOGY</div>
-          <div class="text-sm mt-2">TOOLS</div>
+          <div class="orbitron text-2xl font-bold text-accent-cyan">ACADEMICA</div>
+          <div class="text-sm mt-2">Power Systems</div>
+           <div class="text-sm mt-2">Control Systems</div>
+           <div class="text-sm mt-2">AI and ML </div>
+           <div class="text-sm mt-2">Power Electronics</div>
         </div>
         <div class="hud-element p-6 text-center">
           <div class="hud-corner tl"></div>
@@ -4211,6 +4216,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
