--- a/index.html
+++ b/index.html
@@ -490,26 +490,32 @@ As an enthusiastic Electrical Engineering researcher with a strong academic foun
           <div class="hud-corner bl"></div>
           <div class="hud-corner br"></div>
           <div class="orbitron text-2xl font-bold text-accent-cyan">ACADEMICA</div>
-          <div class="text-sm mt-2">Power Systems</div>
-           <div class="text-sm mt-2">Control Systems</div>
-           <div class="text-sm mt-2">AI and ML </div>
-           <div class="text-sm mt-2">Power Electronics</div>
+          <div class="text-sm mt-2">• Power Systems</div>
+           <div class="text-sm mt-2">• Control Systems</div>
+           <div class="text-sm mt-2">• AI and ML </div>
+           <div class="text-sm mt-2">• Power Electronics</div>
         </div>
         <div class="hud-element p-6 text-center">
           <div class="hud-corner tl"></div>
           <div class="hud-corner tr"></div>
           <div class="hud-corner bl"></div>
           <div class="hud-corner br"></div>
-          <div class="orbitron text-2xl font-bold text-accent-cyan">STRATEGY</div>
-          <div class="text-sm mt-2">MAPS</div>
+          <div class="orbitron text-2xl font-bold text-accent-cyan">INDUSTRY WORK</div>
+          <div class="text-sm mt-2">• Electrical AutoCAD Designs </div>
+          <div class="text-sm mt-2">• Energy Audits  </div>
+          <div class="text-sm mt-2">• PLC, SCADA Control  </div>
+          <div class="text-sm mt-2">• AI Home Automation Hardware</div>
         </div>
         <div class="hud-element p-6 text-center">
           <div class="hud-corner tl"></div>
           <div class="hud-corner tr"></div>
           <div class="hud-corner bl"></div>
           <div class="hud-corner br"></div>
-          <div class="orbitron text-2xl font-bold text-accent-cyan">INNOVATION</div>
-          <div class="text-sm mt-2">WONDER</div>
+          <div class="orbitron text-2xl font-bold text-accent-cyan">RESEARCH </div>
+          <div class="text-sm mt-2">• AI Data Center Dynamic <br> Power Consumption  Modeling </div>
+          <div class="text-sm mt-2">• Low-Inertia Power Systems </div>
+          <div class="text-sm mt-2"> • RES-Dominant Grid Stability </div>
+          <div class="text-sm mt-2">• Neural Network Based Intelligent Ctrl</div>
         </div>
       </div>
     </div>
@@ -4216,6 +4222,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
