--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ As an enthusiastic Electrical Engineering researcher with a strong academic foun
           <div class="hud-corner tr"></div>
           <div class="hud-corner bl"></div>
           <div class="hud-corner br"></div>
-          <div class="orbitron text-2xl font-bold text-accent-cyan">ACADEMICA</div>
+          <div class="orbitron text-2xl font-bold text-accent-cyan">ACADEMIA</div>
           <div class="text-sm mt-2">• Power Systems</div>
            <div class="text-sm mt-2">• Control Systems</div>
            <div class="text-sm mt-2">• AI and ML </div>
@@ -4222,6 +4222,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
